--- a/emppu/index.html
+++ b/emppu/index.html
@@ -8,6 +8,9 @@
     <title>404</title>
 </head>
 <body>
-    
+    <div class="four04">
+        <p class="four">4 0 4</p>
+        <p class="page">Page Not Found</p>
+    </div>
 </body>
 </html>
