--- a/emppu/index.html
+++ b/emppu/index.html
@@ -8,9 +8,12 @@
     <title>404</title>
 </head>
 <body>
-    <div class="four04">
-        <p class="four">4 0 4</p>
-        <p class="page">Page Not Found</p>
+    <div id="navbar">
+        <a href="#">Home</a>
+        <a href="#">Blogs</a>
+        <a href="#">Contacts</a>
     </div>
+    <canvas id="tv-screen"></canvas>
+    <script src="index.js"></script>
 </body>
 </html>
